--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
+button{
+  margin-left: 20px !important;
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -40,3 +45,5 @@
 .read-the-docs {
   color: #888;
 }
+
+
